# cloudera-rag-assistant

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
src/cloudera_llm/: __init__.py  config.py
src/cloudera_llm/api/: __init__.py  main.py
src/cloudera_llm/cli/: catalog.py  chat.py  ingest.py  telegram.py
src/cloudera_llm/embeddings/: __init__.py  embedder.py
src/cloudera_llm/ingestion/: __init__.py  browser.py  catalog.py  chunker.py  local_files.py  metadata.py  scraper.py  sitemap.py  state.py
src/cloudera_llm/llm/: __init__.py  client.py
src/cloudera_llm/rag/: __init__.py  pipeline.py
src/cloudera_llm/telegram/: __init__.py  bot.py  formatter.py  prompts.py
src/cloudera_llm/vectorstore/: __init__.py  store.py
